# zenplay

./: .gitignore  CMakeLists.txt  README.md  audio_video_sync_integration_complete.md  conanfile.py  fix_sdl_logs.sh
config/: zenplay.example.json  zenplay.json
docs/: AVERROR_INVALIDDATA_and_PTS_jump_root_cause.md  AVERROR_INVALIDDATA_diagnosis.md  DETAILED_DECODE_ANALYSIS_AND_MPV_COMPARISON.md  andthen_execution_flow_simulation.md  architecture_overview.md  async_seek_implementation_guide.md  async_seek_implementation_summary.md  audio_architecture_analysis.md  audio_clock_cleanup_complete.md  audio_clock_redundancy_analysis.md  audio_frame_structure_unification_analysis.md  audio_frame_structure_unification_complete.md  audio_multi_frame_pts_calculation_fix.md  audio_pts_calculation_across_frames_analysis.md  audio_pts_precise_calculation_complete.md  audio_pts_samples_played_semantic_analysis.md  audio_resampler_refactor_report.md  audio_sync_problem_resolution.md  audio_video_pts_inconsistency_analysis.md  audio_video_sync_analysis.md  audio_video_sync_design.md  audio_video_sync_documentation_index.md  av_column_plan.md  av_sync_bug_fix_report.md  av_sync_design.md  av_sync_mechanism_analysis.md  complete_player_architecture.md  config_manager_autosave.md  core_components.md  correct_loki_sdl_architecture.md  decode_stats_application_guide.md  execution_plan_priority_features.md  expected_pts_explanation.md  feature_enhancement_roadmap.md  ffmpeg7_network_options_reference.md  flow_control_analysis_cn.md  flow_control_decision_matrix.md  getcurrenttime_design_analysis.md  global_config_system_design.md  global_config_usage.md  (+72 more)
docs/column/: 01_player_overview.md  02_video_encoding.md  03_audio_encoding.md  04_timestamp_sync.md  05_demuxing.md  05_ffmpeg_api_intro.md  06_demuxer_zenplay.md  07_video_decode_theory_practice_v2.md  07_video_decode_zenplay.md  08_audio_decode_theory_practice.md  08_audio_decode_zenplay.md  09_hw_decode_theory_practice.md  11_audio_rendering_pcm_basics.md  12_audio_resampling_theory.md  15_video_rendering_yuv_to_rgb.md  16_cross_platform_rendering_sdl.md  17_zero_copy_rendering_d3d11.md  20_av_sync_theory_practice.md
examples/: sdl_renderer_demo.cpp  timer_util_example.cpp
resources/: zenplay.qrc
src/: main.cpp
src/player/: playback_controller.cpp  playback_controller.h  video_player.cpp  video_player.h  zen_player.cpp  zen_player.h
src/player/audio/: audio_output.cpp  audio_output.h  audio_player.cpp  audio_player.h  audio_resampler.cpp  audio_resampler.h  resampled_audio_frame.h
src/player/audio/impl/: alsa_audio_output.cpp  alsa_audio_output.h  wasapi_audio_output.cpp  wasapi_audio_output.h
src/player/codec/: audio_decoder.h  decode.cpp  decode.h  hw_decoder_context.cpp  hw_decoder_context.h  hw_decoder_type.cpp  hw_decoder_type.h  video_decoder.cpp  video_decoder.h
src/player/common/: blocking_queue.h  common_def.h  error.cpp  error.h  error_macros.h  ffmpeg_error_utils.cpp  ffmpeg_error_utils.h  log_manager.cpp  log_manager.h  player_state_manager.cpp  player_state_manager.h  sdl_error_utils.h  thread_safe_queue.h  timer.cpp  timer.h  timer_util.h  win32_error_utils.cpp  win32_error_utils.h
src/player/config/: README.md  config_manager.cpp  config_manager.h  global_config.cpp  global_config.cpp.backup  global_config.h
src/player/demuxer/: demuxer.cpp  demuxer.h
src/player/loader/: resource_loader.h
src/player/loader/impl/: local_file_loader.h
src/player/render/: renderer.cpp  renderer.h
src/player/render/impl/: sdl_renderer.h
src/player/stats/: statistics_manager.cpp  statistics_manager.h  stats_initialization.h  stats_integration.h  stats_types.h
src/player/sync/: av_sync_controller.cpp  av_sync_controller.h
src/player/video/: video_player.cpp  video_player.h
src/player/video/render/: render_path_selector.cpp  render_path_selector.h  renderer.cpp  renderer.h  renderer_proxy.cpp  renderer_proxy.h
src/player/video/render/impl/: sdl_manager.cpp  sdl_renderer.cpp  sdl_renderer.h
src/player/video/render/impl/d3d11/: d3d11_context.cpp  d3d11_context.h  d3d11_renderer.cpp  d3d11_renderer.h  d3d11_shader.cpp  d3d11_shader.h  d3d11_swap_chain.cpp  d3d11_swap_chain.h
src/player/video/render/impl/sdl/: sdl_manager.cpp  sdl_manager.h  sdl_renderer.cpp  sdl_renderer.h
src/view/: main_window.cpp  main_window.h
tests/: CMakeLists.txt  README.md  test_av_sync_controller.cpp  test_blocking_queue.cpp  test_error_utils.cpp  test_player_state_manager_wait_resume.cpp  test_result_error.cpp  test_thread_safe_queue.cpp  test_win32_error_utils.cpp
